MDEV-7613: MariaDB 5.5.40 server crash on update table left join with a view

Multi-update do not need full list of leaf tables. It also do not use it on prepare (mysql_multi_update_prepare()).